--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #76c8ff;
+    background-color: #79f116;
     margin: 0;
     font-family: sans-serif;
     display: flex;
@@ -22,7 +22,7 @@ header {
 
 header a {
     color: white;
-    background-color: #12a0ff;
+    background-color: #b4f380;
     border: solid 1px gray;
     border-radius: 3px;
     padding: .25rem .5rem;
@@ -34,7 +34,7 @@ header a {
 }
 
 header a:hover, form button:hover{
-    background-color: #1084d1;
+    background-color: #9ae0619c;
     cursor: pointer;
 }
 
@@ -71,7 +71,7 @@ form input, form button {
 
 form button {
     color: white;
-    background-color: #13a0ff;
+    background-color: #9ae061;
 }
 
 footer {
